--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,18 +1,13 @@
 {
-  "name": "Cogitron Omega",
+  "name": "Cogitron Omega IA",
   "short_name": "Cogitron",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0e0e10",
-  "theme_color": "#00ff88",
+  "background_color": "#ffffff",
+  "theme_color": "#007bff",
   "icons": [
     {
-      "src": "/static/icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/static/icon.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/4712/4712035.png",
       "sizes": "512x512",
       "type": "image/png"
     }
