--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,15 +1,17 @@
 {
-  "name": "Cogitron Omega IA",
+  "name": "Cogitron Omega",
   "short_name": "Cogitron",
+  "description": "L'IA personnelle de Louis Riallant",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f4f7f6",
   "theme_color": "#007bff",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/4712/4712035.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
