--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
+  "version": 2,
   "cleanUrls": true,
-  "framework": null,
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ]
