--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,13 @@
   "version": 2,
   "cleanUrls": true,
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    { 
+      "source": "/", 
+      "destination": "/templates/index.html" 
+    },
+    { 
+      "source": "/static/(.*)", 
+      "destination": "/static/$1" 
+    }
   ]
 }
