Simplify vercel.json rewrites configuration

--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,6 @@
   "version": 2,
   "cleanUrls": true,
   "rewrites": [
-    { 
-      "source": "/", 
-      "destination": "/templates/index.html" 
-    },
-    { 
-      "source": "/static/(.*)", 
-      "destination": "/static/$1" 
-    }
+    { "source": "/", "destination": "/templates/index.html" }
   ]
 }
