--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "version": 2,
   "cleanUrls": true,
   "rewrites": [
-    { "source": "/", "destination": "/templates/index.html" }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
